Bug 128156 - FILEOPEN DOCX Change tracked entries lost
Summary: FILEOPEN DOCX Change tracked entries lost
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-10-15 15:12 UTC by NISZ LibreOffice Team
Modified: 2019-10-17 08:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (41.27 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-10-15 15:12 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (58.76 KB, image/png)
2019-10-15 15:13 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-10-15 15:12:45 UTC
Created attachment 155021 [details]
Example file from Word

Attached minimized user made document contains one change tracked entry after a section break and header. In Writer master this file opens with the change tracked entry accepted.

Steps to reproduce:
1.	Open attached document

Actual results:
Manage changes window is empty.

Expected results:
There should be one change tracked addition to the text.

LibreOffice details:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 489eef894e7034873ad262f9dfca554022db1b09
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-10-01_23:43:38
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Bibisected using bibisect-win64-6.4 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=e8bae67b3dbcc90ace8264b6b1aefaf0ce459aba 
author László Németh <nemeth@numbertext.org> Wed Jul 17 13:37:44 2019 +0200 committer László Németh <nemeth@numbertext.org> Thu Jul 18 14:42:07 2019 +0200

tdf#125894: DOCX: import tracked changes in frames
Comment 1 NISZ LibreOffice Team 2019-10-15 15:13:07 UTC
Created attachment 155022 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Xisco Faulí 2019-10-16 08:41:47 UTC
Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: 4704acf63f4fed3a99fc95ff63c82eb5a9ae3908
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 László Németh 2019-10-16 09:44:39 UTC
tdf#128156 DOCX import: fix losing redline at page break

w:framePr of page header doesn't mean real frame conversion,
so don't store and lose redlines after it.

Regression from commit e8bae67b3dbcc90ace8264b6b1aefaf0ce459aba
"tdf#125894: DOCX: import tracked changes in frames".
Comment 4 Commit Notification 2019-10-16 09:44:56 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/350972a8bffc1a74b531e0336954bf54b1356025

tdf#128156 DOCX import: fix losing redline at page break

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-10-17 08:49:35 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: 01d28b0b85f99590c0581e4bbf636bc9281e0571
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!