tdf#128156 DOCX import: fix losing redline at page break

w:framePr of page header doesn't mean real frame conversion,
so don't store and lose redlines after it.

Regression from commit e8bae67b3dbcc90ace8264b6b1aefaf0ce459aba
"tdf#125894: DOCX: import tracked changes in frames".

Change-Id: I46cd153cccef4824deca1f64341f2ea6672cdc42